# cvmfs-unpack-api

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  recipe.yaml  unpack-api.gitlab-ci.yml
.github/workflows/: build-and-push.yml  main.yml  sync.yml
test-image/: .gitlab-ci.yml  README.md
unpack-api/: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
unpack-api/unpack_api/: main.py
